--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -84,14 +84,47 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9j9-9p-I9X">
+                                <rect key="frame" x="20" y="160" width="374" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="IS8-rP-lNG">
+                                <rect key="frame" x="20" y="214" width="374" height="287"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="IS8-rP-lNG" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="3Hg-uN-ndC"/>
+                            <constraint firstItem="9j9-9p-I9X" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="4TS-kN-26z"/>
+                            <constraint firstItem="IS8-rP-lNG" firstAttribute="leading" secondItem="9j9-9p-I9X" secondAttribute="leading" id="DSj-wn-ine"/>
+                            <constraint firstItem="9j9-9p-I9X" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Ny9-sI-iBf"/>
+                            <constraint firstItem="IS8-rP-lNG" firstAttribute="top" secondItem="9j9-9p-I9X" secondAttribute="bottom" constant="20" id="RZS-6H-NXw"/>
+                            <constraint firstItem="9j9-9p-I9X" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="TUp-Ll-oaQ"/>
+                            <constraint firstItem="IS8-rP-lNG" firstAttribute="trailing" secondItem="9j9-9p-I9X" secondAttribute="trailing" id="Xum-tx-yLI"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" id="nOR-Ri-bfF"/>
+                    <navigationItem key="navigationItem" id="nOR-Ri-bfF">
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="V6g-cv-cKd">
+                            <connections>
+                                <action selector="saveButtonTapped:" destination="BYZ-38-t0r" id="IBM-UD-MaO"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="bodyTextView" destination="IS8-rP-lNG" id="T1s-wq-xv7"/>
+                        <outlet property="titleTextField" destination="9j9-9p-I9X" id="tSi-P7-ZPG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1000" y="78"/>
+            <point key="canvasLocation" x="1000.0000000000001" y="77.678571428571431"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="2kL-cz-bGP">
