--- a/Journal Core Data/Journal Core Data/Base.lproj/Main.storyboard
+++ b/Journal Core Data/Journal Core Data/Base.lproj/Main.storyboard
@@ -68,24 +68,24 @@
             </objects>
             <point key="canvasLocation" x="-300" y="-460.04464285714283"/>
         </scene>
-        <!--View Controller-->
+        <!--Entry Detail View Controller-->
         <scene sceneID="2iy-5k-ZKe">
             <objects>
-                <viewController id="thJ-ur-CO1" sceneMemberID="viewController">
+                <viewController id="thJ-ur-CO1" customClass="EntryDetailViewController" customModule="Journal_Core_Data" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="9Ln-or-esL">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" spacing="19" translatesAutoresizingMaskIntoConstraints="NO" id="jkM-Rf-cbe">
-                                <rect key="frame" x="20" y="105" width="374" height="295"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="19" translatesAutoresizingMaskIntoConstraints="NO" id="jkM-Rf-cbe">
+                                <rect key="frame" x="20" y="108" width="374" height="269"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter title here:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QVc-Xc-UFq">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="PmT-3z-ZEU">
-                                        <rect key="frame" x="0.0" y="53" width="374" height="242"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="PmT-3z-ZEU">
+                                        <rect key="frame" x="0.0" y="53" width="374" height="216"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y8F-LT-90A">
                                                 <rect key="frame" x="0.0" y="0.0" width="374" height="2"/>
@@ -94,8 +94,8 @@
                                                     <constraint firstAttribute="height" constant="2" id="X0a-Mo-dMn"/>
                                                 </constraints>
                                             </view>
-                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="UGl-Du-Ui1">
-                                                <rect key="frame" x="0.0" y="22" width="374" height="220"/>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="UGl-Du-Ui1">
+                                                <rect key="frame" x="0.0" y="22" width="374" height="194"/>
                                                 <color key="backgroundColor" white="0.90000000000000002" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
@@ -107,6 +107,12 @@
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="jkM-Rf-cbe" firstAttribute="top" secondItem="NNh-lp-N9B" secondAttribute="top" constant="20" id="11Y-B0-H3U"/>
+                            <constraint firstItem="NNh-lp-N9B" firstAttribute="trailing" secondItem="jkM-Rf-cbe" secondAttribute="trailing" constant="20" id="MaQ-fo-Uc8"/>
+                            <constraint firstItem="jkM-Rf-cbe" firstAttribute="leading" secondItem="NNh-lp-N9B" secondAttribute="leading" constant="20" id="r1p-qa-3v8"/>
+                            <constraint firstItem="jkM-Rf-cbe" firstAttribute="height" secondItem="9Ln-or-esL" secondAttribute="height" multiplier="0.3" id="vQS-TV-vtc"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="NNh-lp-N9B"/>
                     </view>
                     <navigationItem key="navigationItem" id="bB4-Yt-SUG">
